# Chaos

./: CMakeLists.txt  LICENSE  README.md
include/: Chaotic_Dynamical_Systems.h  Halvorsen_System.h  Lorenz_System.h  Sprott_Linz_F_System.h  Thomas_System.h
src/: Chaotic_Dynamical_Systems.cpp  Halvorsen_System.cpp  Lorenz_System.cpp  Sprott_Linz_F_System.cpp  Thomas_System.cpp  main.cpp
src/halvorsen_system_main/: main.cpp
src/lorenz_system_main/: main.cpp
src/sprott_linz_f_system_main/: main.cpp
